# substack-newsletter-search-engine

./: Makefile  README.md  main.py  prefect-local.yaml  pyproject.toml  requirements.txt
src/: config.py
src/api/models/: api_models.py
src/api/routes/: health_routes.py  search_routes.py
src/api/services/: generation_service.py  search_service.py
src/api/services/providers/: huggingface_service.py  openai_service.py  openrouter_service.py
src/api/services/providers/utils/: evaluation_metrics.py  messages.py  prompts.py
src/infrastructure/qdrant/: ingest_from_sql.py  qdrant_vectorstore.py
src/infrastructure/supabase/: init_session.py
src/models/: article_models.py  qdrant_models.py  sql_models.py
src/pipelines/flows/: embeddings_ingestion_flow.py
src/pipelines/tasks/: fetch_rss.py
src/utils/: logger_util.py
